--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "svg-sprite-loader": "^6.0.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
