--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.5",
+    "@loadable/component": "^5.15.2",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
+    "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router": "^6.3.0",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^6.3.0",
     "svg-sprite-loader": "^6.0.11"
   },
