--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^6.3.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^6.3.0",
+    "recharts": "^2.1.10",
     "svg-sprite-loader": "^6.0.11"
   },
   "devDependencies": {
