--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,21 +15,22 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "baseUrl": "./src",
     "paths": {
-      "@/*": ["./src/*"],
-      "@/components/*": ["./src/components/*"],
-      "@/styles/*": ["./src/styles/*"],
-      "@/utils/*": ["./src/utils/*"],
-      "@/assets/*": ["./src/assets/*"],
-      "@/pages/*": ["./src/pages/*"],
-      "@/routes/*": ["./src/routes/*"],
-      "@/hooks/*": ["./src/hooks/*"],
-      "@/mobx/*": ["./src/mobx/*"],
-      "@/network/*": ["./src/network/*"],
-      "@/constants/*": ["./src/constants/*"],
-      "@/plugins/*": ["./src/plugins/*"],
-      "@/env/*": ["./src/env/*"],
-      "@/types/*": ["./src/types/*"]
+      "@/*": ["/*"],
+      "@/components/*": ["components/*"],
+      "@/styles/*": ["styles/*"],
+      "@/utils/*": ["utils/*"],
+      "@/assets/*": ["assets/*"],
+      "@/pages/*": ["pages/*"],
+      "@/routes/*": ["routes/*"],
+      "@/hooks/*": ["hooks/*"],
+      "@/mobx/*": ["mobx/*"],
+      "@/network/*": ["network/*"],
+      "@/constants/*": ["constants/*"],
+      "@/plugins/*": ["plugins/*"],
+      "@/env/*": ["env/*"],
+      "@/types/*": ["types/*"]
     }
   },
   "include": ["src"],
