components目录下的样式书写优化

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,10 +27,10 @@
       "@/hooks/*": ["hooks/*"],
       "@/mobx/*": ["mobx/*"],
       "@/network/*": ["network/*"],
-      "@/constants/*": ["constants/*"],
       "@/plugins/*": ["plugins/*"],
       "@/env/*": ["env/*"],
-      "@/types/*": ["types/*"]
+      "@/types/*": ["types/*"],
+      "@/consts/*": ["consts/*"],
     }
   },
   "include": ["src"],
